# zk

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.ru.md  STRATEGY.md
docs/architecture/: README.md  decision-map.md
docs/architecture/decisions/: 0001-project-name-and-ecosystem-positioning.md  0002-note-id-scheme-and-filename-layout.md  0003-link-representation.md  0004-frontmatter-convention.md  README.md
docs/architecture/research/: 2026-05-09-A1-decision-summary.md  2026-05-09-A1-note-id-scheme-design.md  2026-05-09-A1-note-id-scheme-discovery.md  2026-05-09-A1-ulid-slug-rust-research.md  2026-05-09-A2-decision-summary.md  2026-05-09-A2-link-representation-design.md  2026-05-09-A2-link-representation-discovery.md  2026-05-09-A2-link-representation-research.md  2026-05-09-A3-decision-summary.md  2026-05-09-A3-frontmatter-convention-design.md  2026-05-09-A3-frontmatter-convention-discovery.md  2026-05-09-A3-frontmatter-convention-research.md  2026-05-09-observe.md
docs/architecture/reviews/: 2026-05-09-meta-review-ADR-0002.md  2026-05-09-meta-review-ADR-0003.md  2026-05-09-meta-review-ADR-0004.md
docs/architecture/reviews/2026-05-09-roast-A1-note-id-scheme/: 00-summary.md  01-devil-advocate.md  02-pragmatist.md  (+4 more)
docs/ideation/: 2026-05-09-zk-surprise-me-ideation.md
scripts/: build-release.sh
src/: editor.rs  main.rs
src/cli/: mod.rs
src/commands/: mod.rs  open.rs
src/config/: mod.rs
src/notes/: metadata.rs  mod.rs  store.rs
src/tags/: mod.rs
src/templates/: mod.rs
src/tui/: mod.rs
(+14 files in other folders)
