[package]
name = "zk"
version = "0.1.0"
edition = "2021"
authors = ["Igor Kramar <i@ikramar.ru>"]
description = "Менеджер базы знаний в формате Zettelkasten"
license = "MIT"
repository = "https://github.com/IgorKramar/zk"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
directories = "5.0"
toml = "0.8"
serde_yaml = "0.9"
tera = "1.19"
walkdir = "2.4"
uuid = { version = "1.7", features = ["v4"] }
regex = "1.10.3"
colored = "2.1.0"